[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/iTitus/aoc2015"
license = "MIT"

[dependencies]
anyhow = "1.0"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
indexmap = "2.1"
itertools = "0.12"
lazy_static = "1.4"
md-5 = "0.10"
nalgebra = "0.32"
num = "0.4"
once_cell = "1.19"
pathfinding = "4.8"
rayon = "1.8"
regex = "1"
rustc-hash = "1.1"
thiserror = "1.0"
tinyvec = "1.6"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
codegen-units = 1
lto = true
